--- a/package.json
+++ b/package.json
@@ -2,19 +2,32 @@
 	"name": "boilerplate-project-stockchecker",
 	"version": "0.0.1",
 	"description": "InfoSec project for freeCodeCamp",
+	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "mocha tests/2_functional-tests.js"
 	},
 	"dependencies": {
+		"async": "^3.2.6",
+		"axios": "^1.7.7",
 		"body-parser": "^1.15.2",
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
 		"cors": "^2.8.1",
-		"dotenv": "^8.2.0",
-		"express": "^4.14.0",
+		"dotenv": "^8.6.0",
+		"express": "^4.19.2",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^3.2.0",
+		"mongodb": "^6.8.0",
+		"mongoose": "^8.6.1",
+		"node": "^22.8.0",
+		"node-fetch": "^3.3.2",
+		"nodemon": "^3.1.4",
+		"request": "^2.88.2"
 	},
+	"devDependencies": {
+		"mocha": "^8.2.1"
+	                      },
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-stockchecker"
